@@ -324,17 +324,16 @@ class ProtImodBase(ProtTomoImportFiles, EMProtocol, ProtTomoBase):
             path.createLink(inTsFileName, outputTsFileName)
 
         elif imodInterpolation:
-            logger.info("Apply the transformation from the input tilt-series")
-
+            xfFile = self.getExtraOutFile(tsId, ext=XF_EXT)
             # Use IMOD newstack interpolation
             if firstTi.hasTransform():
                 # Generate transformation matrices file (xf)
-                xfFile = self.getExtraOutFile(tsId, ext=XF_EXT)
                 utils.genXfFile(ts, xfFile)
 
                 # Generate the interpolated TS with IMOD's newstack program
-                logger.info("Tilt-series interpolated with IMOD [%s]" % tsId)
+                logger.info("Tilt-series will be interpolated with IMOD [%s]" % tsId)
                 if presentAcqOrders:
+                    logger.info("Tilt-series re-stacked with IMOD")
                     tsExcludedIndices = [ti.getIndex() for ti in ts if not ti.getAcquisitionOrder() in presentAcqOrders]
                 else:
                     tsExcludedIndices = [ti.getIndex() for ti in ts if not ti.getAcquisitionOrder()]
@@ -359,7 +358,7 @@ class ProtImodBase(ProtTomoImportFiles, EMProtocol, ProtTomoBase):
 
             else:
                 # The given TS is interpolated
-                logger.info("The given TS is interpolated [%s]" % tsId)
+                logger.info("The given TS is interpolated or not aligned [%s]" % tsId)
                 if presentAcqOrders:
                     logger.info("Tilt-series re-stacked with IMOD")
                     if len(presentAcqOrders) != len(ts):
@@ -367,16 +366,13 @@ class ProtImodBase(ProtTomoImportFiles, EMProtocol, ProtTomoBase):
                         self.applyNewStackBasic(ts, outputTsFileName, inTsFileName,
                                                 doSwap=doSwap,
                                                 tsExcludedIndices=tsExcludedIndices)
-                        # TODO: Ask Vilas about this
-                        # if oddEven:
-                        #     self.applyNewStackBasic(ts, outputOddTsFileName, fnOdd,
-                        #                             xfFile=xfFile,
-                        #                             doSwap=doSwap,
-                        #                             tsExcludedIndices=tsExcludedIndices)
-                        #     self.applyNewStackBasic(ts, outputEvenTsFileName, fnEven,
-                        #                             xfFile=xfFile,
-                        #                             doSwap=doSwap,
-                        #                             tsExcludedIndices=tsExcludedIndices)
+                        if oddEven:
+                            self.applyNewStackBasic(ts, outputOddTsFileName, fnOdd,
+                                                    doSwap=doSwap,
+                                                    tsExcludedIndices=tsExcludedIndices)
+                            self.applyNewStackBasic(ts, outputEvenTsFileName, fnEven,
+                                                    doSwap=doSwap,
+                                                    tsExcludedIndices=tsExcludedIndices)
                 else:
                     logger.info("Tilt-series linked [%s]" % tsId)
                     path.createLink(firstTi.getFileName(), outputTsFileName)
